--- a/style.css
+++ b/style.css
@@ -4,7 +4,252 @@
     width:100%;
     background-color:transparent;
     display:flex;
-    position:fixed;
+    position:fixed;/* NAVBAR START  */
+.navbar{
+	height:10vw;
+	background-color:transparent;
+}
+.navbar .nav-logo{
+	height:7.5vw;
+}
+
+
+
+/* NAVBAR END  */
+
+/* GROW WITH START */
+.grow{
+    height:50vw;
+    background-color:transparent;
+    padding:5vw 5vw 0 5vw;
+    margin-top:10vw;
+}
+
+.grow .row .cols{
+    height:40vw;
+    background-color:transparent;
+}
+.grow .row .col1{
+    padding:2.5vw;
+}
+.grow .row .col1 h2{
+    font-size:6vw;
+    font-family:Agency FB;
+    font-weight:600;
+    animation:color 15s ease-in-out 0s alternate;
+}
+.grow .row .col1 p{
+    font-size:1.5vw;
+    font-family:Book Antiqua;
+}
+.grow .row .col1 button{
+    height:4vw;
+    width:10vw;
+    background-color:black;
+    color:white;
+    font-size:1.75vw;
+    border-radius:4vw;
+    border:0;
+    margin-top:2.5vw;
+    font-family:Agency FB;
+}
+
+
+@keyframes color {
+    0%{
+        color:#0D1164;
+    }
+    25%{
+        color:#640D5F;
+    }
+    50%{
+        color:#EA2264;
+    }
+    75%{
+        color:#F78D60;
+    }
+}
+
+
+
+
+
+
+/* COL2 SWIPPER START */
+.grow .row .col2 .swiper {
+    width: 100%;
+    height: 100%;
+}
+.grow .row .col2 .swiper-slide {
+    background-position: center;
+    background-size: cover;
+}
+.grow .row .col2 .swiper-slide img {
+    display: block;
+    width: 100%;
+}
+/* COL2 SWIPPER END */
+
+/* GROW WITH SCREEN BETWEEN 576PX AND 100PX  */
+@media (max-width:576px) and (min-width:100px){
+    .grow{
+    height:145vw;
+    background-color:transparent;
+    padding:7.5vw 7.5vw 0 7.5vw;
+}
+
+.grow .row .cols{
+    height:60vw;
+    background-color:transparent;
+}
+.grow .row .col1{
+    padding:2.5vw;
+}
+.grow .row .col1 h2{
+    font-size:7.5vw;
+    font-family:Agency FB;
+    font-weight:600;
+    animation:color 15s ease-in-out 0s alternate;
+}
+.grow .row .col1 p{
+    font-size:2.5vw;
+    font-family:Book Antiqua;
+}
+.grow .row .col1 button{
+    height:8vw;
+    width:20vw;
+    background-color:black;
+    color:white;
+    font-size:2.5vw;
+    border-radius:4vw;
+    border:0;
+    margin-top:2.5vw;
+    font-family:Agency FB;
+}
+}
+/* GROW WITH SCREEN BETWEEN 576PX AND 100PX  */
+
+/* GROW WITH END */
+
+/* WHAT YOU NEED START  */
+.need{
+    height:30vw;
+    background-color:#f3f2f0;
+    padding:5vw;
+}
+.need h2{
+    font-size:2.5vw;
+    color:black;
+    font-family:Agency FB;
+}
+.need .row{
+    margin-top:2vw;
+}
+.need .row .col-6{
+    width:20%;
+}
+.need .row .cols{
+    height:18vw;
+    width:100%;
+    background-color:transparent;
+    border-radius:0.25vw;
+    overflow:hidden;
+}
+.need .row .cols img{
+    width:100%;
+    transition: all 0.25s ease-in-out 0s;
+}
+.need .row .cols:hover img{
+    transform:scale(1.1);
+}
+.need .row .cols .title{
+    height:30%;
+    background-color: transparent;
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    font-size:1.25vw;
+    position:relative;
+    bottom:-0.45vw;
+    font-weight:600;
+    font-family:High Tower Text;
+}
+.need .row .cols .title a{
+    text-decoration:none;
+    color:black;
+}
+/* WHAT YOU NEED SCREEN BETWEEN 576PX AND 100PX  */
+@media (max-width:576px) and (min-width:100px) {
+    .need{
+    height:475vw;
+    background-color:#f3f2f0;
+    padding:5vw;
+}
+.need h2{
+    font-size:7.5vw;
+}
+.need .row{
+    padding:10vw;
+    margin-top:2vw;
+}
+.need .row .col-6{
+    width:auto;
+}
+.need .row .cols{
+    height:75vw;
+    width:100%;
+    background-color:white;
+    border-radius:0.25vw;
+    overflow:hidden;
+    margin-top:7.5vw;
+    transition: all 0.25s ease-in-out 0s;
+}
+.need .row .cols:hover{
+    box-shadow:2vw 2vw 6vw 2vw #86a701;
+}
+.need .row .cols img{
+    width:100%;
+    transition: all 0.25s ease-in-out 0s;
+}
+.need .row .cols:hover img{
+    transform:scale(1.1);
+}
+.need .row .cols .title{
+    height:30%;
+    background-color:transparent;
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    font-size:4vw;
+    position:relative;
+    bottom:-0.45vw;
+    font-weight:600;
+    font-family:High Tower Text;
+}
+}
+/* WHAT YOU NEED SCREEN BETWEEN 576PX AND 100PX  */
+/* WHAT YOU NEED END  */
+
+
+/* BUSINESS START */
+/* .business{
+    height:40vw;
+    background-color:red;
+    padding:2.5vw;
+}
+.business .row{
+    height:30vw;
+    background-color:green;
+}
+.business .row .cols{
+    height:100%;
+    background-color:grey;
+} */
+
+
+
+
+/* BUSINESS END */
     top:0px;
     padding-left:5vw;
     padding-right:5vw;
@@ -347,6 +592,7 @@
     height:100%;
     background-color:grey;
 } */
+
 
 
 
